--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ content
 ---------------------------------------------------------------------------------------------------------- */
 .logo
 {
-	height:200px;	
+	height:100px;	
 	
 }
 
@@ -92,8 +92,7 @@ content
 {	
 	font-size:36px;
 	color:white;
-
-	margin-top:140px;
+	margin-top:40px;
 	font-family: gess , ubuntu-r;	
 }
 
@@ -335,6 +334,7 @@ Footer
  
   .container .credit {
     margin: 20px 0;
+    font-family: gess;
   }
 
 /* ----------------------------------------------------------------------------------------------------------
